--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
 </header>
 
-<body background="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\missionvision.png">
+<body background="assets\images\missionvision.png">
     
 
 	<h1><b>About Us</b></h1>
