--- a/gallery.html
+++ b/gallery.html
@@ -56,82 +56,82 @@
 
     <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis.jpg" width="300" height="200">
+            <a href="assets\images\dis.jpg" target="_blank"><img src="assets\images\dis.jpg" width="300" height="200">
             <div class="des">Disney Land Theater</div>
         </div>
     <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\boat.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\boat.jpg" width="300" height="200">
+            <a href="assets\images\boat.jpg" target="_blank"><img src="assets\images\boat.jpg" width="300" height="200">
               <div class="des">Mark Twain Riverboat</div>
         </div>
     <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis1.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis1.jpg" width="300" height="200">
+            <a href="assets\images\dis1.jpg" target="_blank"><img src="assets\images\dis1.jpg" width="300" height="200">
               <div class="des">Toy Story Park</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis2.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis2.jpg" width="300" height="200">
+            <a href="assets\images\dis2.jpg" target="_blank"><img src="assets\images\dis2.jpg" width="300" height="200">
               <div class="des">Disney Land</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis3.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis3.jpg" width="300" height="200">
+            <a href="assets\images\dis3.jpg" target="_blank"><img src="assets\images\dis3.jpg" width="300" height="200">
               <div class="des">Disney Land Parade</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis4.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\dis4.jpg" width="300" height="200">
+            <a href="assets\images\dis4.jpg" target="_blank"><img src="assets\images\dis4.jpg" width="300" height="200">
               <div class="des">Alladin's Agrabah</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food.jpg" width="300" height="200">
+            <a href="assets\images\food.jpg" target="_blank"><img src="assets\images\food.jpg" width="300" height="200">
               <div class="des">Street Food</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food1.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food1.jpg" width="300" height="200">
+            <a href="assets\images\food1.jpg" target="_blank"><img src="assets\images\food1.jpg" width="300" height="200">
               <div class="des">Yoshinoya</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food2.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\food2.jpg" width="300" height="200">
+            <a href="assets\images\food2.jpg" target="_blank"><img src="assets\images\food2.jpg" width="300" height="200">
               <div class="des">Tokyo Tower Cafe</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\kitkat.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\kitkat.jpg" width="300" height="200">
+            <a href="assets\images\kitkat.jpg" target="_blank"><img src="assets\images\kitkat.jpg" width="300" height="200">
               <div class="des">KitKat Banana</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\tb1.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\tb1.jpg" width="300" height="200">
+            <a href="assets\images\tb1.jpg" target="_blank"><img src="assets\images\tb1.jpg" width="300" height="200">
               <div class="des">Tokyo Banana</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\coke.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\coke.jpg" width="300" height="200">
+            <a href="assets\images\coke.jpg" target="_blank"><img src="assets\images\coke.jpg" width="300" height="200">
               <div class="des">Sparkling Coke</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\menu.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\menu.jpg" width="300" height="200">
+            <a href="assets\images\menu.jpg" target="_blank"><img src="assets\images\menu.jpg" width="300" height="200">
               <div class="des">Menu</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\map.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\map.jpg" width="300" height="200">
+            <a href="assets\images\map.jpg" target="_blank"><img src="assets\images\map.jpg" width="300" height="200">
               <div class="des">Train Route Guide</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\mape.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\mape.jpg" width="300" height="200">
+            <a href="assets\images\mape.jpg" target="_blank"><img src="assets\images\mape.jpg" width="300" height="200">
               <div class="des">Fujisan</div>
         </div>
         <div class="wrapper">
         <div class="gallery">
-            <a href="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\tower.jpg" target="_blank"><img src="C:\Users\Mark\Documents\My Project\CSP1\csp1-travelblog\assets\images\tower.jpg" width="300" height="200">
+            <a href="assets\images\tower.jpg" target="_blank"><img src="assets\images\tower.jpg" width="300" height="200">
               <div class="des">Tokyo Sky Tree</div>
         </div>
 
